--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -6,120 +6,74 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>465</width>
-    <height>459</height>
+    <width>593</width>
+    <height>489</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>MainWindow</string>
   </property>
   <widget class="QWidget" name="centralwidget">
+   <widget class="QLabel" name="label">
+    <property name="geometry">
+     <rect>
+      <x>0</x>
+      <y>-20</y>
+      <width>591</width>
+      <height>511</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+    <property name="pixmap">
+     <pixmap>../../Users/User/Downloads/Ù¡Ù£-Ù¤Ù¢-Ù Ù¨-images.jpg</pixmap>
+    </property>
+    <property name="scaledContents">
+     <bool>true</bool>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_2">
+    <property name="geometry">
+     <rect>
+      <x>0</x>
+      <y>-1</y>
+      <width>591</width>
+      <height>91</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+    <property name="pixmap">
+     <pixmap>../../Users/User/Downloads/OIP (1).jpg</pixmap>
+    </property>
+    <property name="scaledContents">
+     <bool>true</bool>
+    </property>
+   </widget>
    <widget class="QWidget" name="gridLayoutWidget">
     <property name="geometry">
      <rect>
-      <x>90</x>
-      <y>10</y>
-      <width>301</width>
-      <height>322</height>
+      <x>130</x>
+      <y>120</y>
+      <width>341</width>
+      <height>284</height>
      </rect>
     </property>
-    <layout class="QGridLayout" name="gridLayout_2">
-     <item row="0" column="2">
-      <widget class="QPushButton" name="pushButton_3">
+    <layout class="QGridLayout" name="gridLayout">
+     <item row="2" column="1">
+      <widget class="QPushButton" name="pushButton_8">
        <property name="minimumSize">
         <size>
-         <width>93</width>
-         <height>93</height>
+         <width>90</width>
+         <height>90</height>
         </size>
        </property>
-       <property name="text">
-        <string/>
-       </property>
-      </widget>
-     </item>
-     <item row="1" column="0">
-      <widget class="QPushButton" name="pushButton_4">
-       <property name="minimumSize">
-        <size>
-         <width>93</width>
-         <height>93</height>
-        </size>
-       </property>
-       <property name="font">
-        <font>
-         <pointsize>53</pointsize>
-        </font>
-       </property>
-       <property name="text">
-        <string/>
-       </property>
-      </widget>
-     </item>
-     <item row="2" column="0">
-      <widget class="QPushButton" name="pushButton_7">
-       <property name="minimumSize">
-        <size>
-         <width>93</width>
-         <height>93</height>
-        </size>
-       </property>
-       <property name="text">
-        <string/>
-       </property>
-      </widget>
-     </item>
-     <item row="1" column="1">
-      <widget class="QPushButton" name="pushButton_5">
-       <property name="minimumSize">
-        <size>
-         <width>93</width>
-         <height>93</height>
-        </size>
-       </property>
-       <property name="text">
-        <string/>
-       </property>
-      </widget>
-     </item>
-     <item row="0" column="1">
-      <widget class="QPushButton" name="pushButton_2">
-       <property name="minimumSize">
-        <size>
-         <width>93</width>
-         <height>93</height>
-        </size>
-       </property>
-       <property name="text">
-        <string/>
-       </property>
-      </widget>
-     </item>
-     <item row="2" column="2">
-      <widget class="QPushButton" name="pushButton_9">
-       <property name="sizePolicy">
-        <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
-         <horstretch>0</horstretch>
-         <verstretch>0</verstretch>
-        </sizepolicy>
-       </property>
-       <property name="minimumSize">
-        <size>
-         <width>93</width>
-         <height>93</height>
-        </size>
-       </property>
-       <property name="text">
-        <string/>
-       </property>
-      </widget>
-     </item>
-     <item row="0" column="0">
-      <widget class="QPushButton" name="pushButton_1">
-       <property name="minimumSize">
-        <size>
-         <width>93</width>
-         <height>93</height>
-        </size>
+       <property name="styleSheet">
+        <string notr="true">QPushButton#pushButton_8{
+ background-color: rgb(255, 255, 255)
+ };</string>
        </property>
        <property name="text">
         <string/>
@@ -130,31 +84,140 @@
       <widget class="QPushButton" name="pushButton_6">
        <property name="minimumSize">
         <size>
-         <width>93</width>
-         <height>93</height>
+         <width>90</width>
+         <height>90</height>
         </size>
+       </property>
+       <property name="styleSheet">
+        <string notr="true">QPushButton#pushButton_6{
+ background-color: rgb(255, 255, 255)
+ };</string>
        </property>
        <property name="text">
         <string/>
        </property>
-       <property name="checkable">
-        <bool>false</bool>
+      </widget>
+     </item>
+     <item row="0" column="0">
+      <widget class="QPushButton" name="pushButton_1">
+       <property name="minimumSize">
+        <size>
+         <width>90</width>
+         <height>90</height>
+        </size>
        </property>
-       <property name="autoRepeatDelay">
-        <number>400</number>
+       <property name="styleSheet">
+        <string notr="true">QPushButton#pushButton_1{
+ background-color: rgb(255, 255, 255)
+ };</string>
        </property>
-       <property name="autoDefault">
-        <bool>false</bool>
+       <property name="text">
+        <string/>
        </property>
       </widget>
      </item>
-     <item row="2" column="1">
-      <widget class="QPushButton" name="pushButton_8">
+     <item row="1" column="1">
+      <widget class="QPushButton" name="pushButton_5">
        <property name="minimumSize">
         <size>
-         <width>93</width>
-         <height>93</height>
+         <width>90</width>
+         <height>90</height>
         </size>
+       </property>
+       <property name="styleSheet">
+        <string notr="true">QPushButton#pushButton_5{
+ background-color: rgb(255, 255, 255)
+ };</string>
+       </property>
+       <property name="text">
+        <string/>
+       </property>
+      </widget>
+     </item>
+     <item row="0" column="1">
+      <widget class="QPushButton" name="pushButton_2">
+       <property name="minimumSize">
+        <size>
+         <width>90</width>
+         <height>90</height>
+        </size>
+       </property>
+       <property name="styleSheet">
+        <string notr="true">QPushButton#pushButton_2{
+ background-color: rgb(255, 255, 255)
+ };</string>
+       </property>
+       <property name="text">
+        <string/>
+       </property>
+      </widget>
+     </item>
+     <item row="1" column="0">
+      <widget class="QPushButton" name="pushButton_4">
+       <property name="minimumSize">
+        <size>
+         <width>90</width>
+         <height>90</height>
+        </size>
+       </property>
+       <property name="styleSheet">
+        <string notr="true">QPushButton#pushButton_4{
+ background-color: rgb(255, 255, 255)
+ };</string>
+       </property>
+       <property name="text">
+        <string/>
+       </property>
+      </widget>
+     </item>
+     <item row="0" column="2">
+      <widget class="QPushButton" name="pushButton_3">
+       <property name="minimumSize">
+        <size>
+         <width>90</width>
+         <height>90</height>
+        </size>
+       </property>
+       <property name="styleSheet">
+        <string notr="true">QPushButton#pushButton_3{
+ background-color: rgb(255, 255, 255)
+ };</string>
+       </property>
+       <property name="text">
+        <string/>
+       </property>
+      </widget>
+     </item>
+     <item row="2" column="2">
+      <widget class="QPushButton" name="pushButton_9">
+       <property name="minimumSize">
+        <size>
+         <width>90</width>
+         <height>90</height>
+        </size>
+       </property>
+       <property name="styleSheet">
+        <string notr="true">QPushButton#pushButton_9{
+ background-color: rgb(255, 255, 255)
+ };</string>
+       </property>
+       <property name="text">
+        <string/>
+       </property>
+      </widget>
+     </item>
+     <item row="2" column="0">
+      <widget class="QPushButton" name="pushButton_7">
+       <property name="minimumSize">
+        <size>
+         <width>90</width>
+         <height>90</height>
+        </size>
+       </property>
+       <property name="styleSheet">
+        <string notr="true">QPushButton#pushButton_7{
+ background-color: rgb(255, 255, 255)
+ };</string>
        </property>
        <property name="text">
         <string/>
@@ -163,70 +226,42 @@
      </item>
     </layout>
    </widget>
-   <widget class="QPushButton" name="pushButton_10">
+   <widget class="QPushButton" name="pushButton_playAgain">
     <property name="geometry">
      <rect>
-      <x>90</x>
-      <y>340</y>
-      <width>101</width>
-      <height>41</height>
+      <x>40</x>
+      <y>422</y>
+      <width>91</width>
+      <height>31</height>
      </rect>
     </property>
-    <property name="font">
-     <font>
-      <pointsize>15</pointsize>
-      <weight>75</weight>
-      <italic>true</italic>
-      <bold>true</bold>
-     </font>
+    <property name="styleSheet">
+     <string notr="true">QPushButton#pushButton_playAgain{
+ background-color: rgb(255, 255, 127);
+ };
+</string>
     </property>
     <property name="text">
-     <string>start</string>
+     <string>Play Again</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="pushButton_11">
+   <widget class="QPushButton" name="pushButton_close">
     <property name="geometry">
      <rect>
-      <x>290</x>
-      <y>340</y>
-      <width>101</width>
-      <height>40</height>
+      <x>460</x>
+      <y>422</y>
+      <width>91</width>
+      <height>31</height>
      </rect>
     </property>
-    <property name="font">
-     <font>
-      <pointsize>15</pointsize>
-      <weight>75</weight>
-      <italic>true</italic>
-      <bold>true</bold>
-     </font>
+    <property name="styleSheet">
+     <string notr="true">QPushButton#pushButton_close{
+ background-color: rgb(255, 255, 127);
+ };
+</string>
     </property>
     <property name="text">
      <string>close</string>
-    </property>
-   </widget>
-   <widget class="QLabel" name="label_2">
-    <property name="geometry">
-     <rect>
-      <x>110</x>
-      <y>390</y>
-      <width>261</width>
-      <height>20</height>
-     </rect>
-    </property>
-    <property name="font">
-     <font>
-      <pointsize>13</pointsize>
-      <weight>75</weight>
-      <italic>true</italic>
-      <bold>true</bold>
-     </font>
-    </property>
-    <property name="text">
-     <string/>
-    </property>
-    <property name="alignment">
-     <set>Qt::AlignCenter</set>
     </property>
    </widget>
   </widget>
@@ -235,36 +270,12 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>465</width>
+     <width>593</width>
      <height>21</height>
     </rect>
    </property>
-   <property name="maximumSize">
-    <size>
-     <width>10777213</width>
-     <height>10777215</height>
-    </size>
-   </property>
   </widget>
-  <widget class="QStatusBar" name="statusbar"/>
  </widget>
  <resources/>
- <connections>
-  <connection>
-   <sender>pushButton_11</sender>
-   <signal>clicked()</signal>
-   <receiver>MainWindow</receiver>
-   <slot>close()</slot>
-   <hints>
-    <hint type="sourcelabel">
-     <x>314</x>
-     <y>366</y>
-    </hint>
-    <hint type="destinationlabel">
-     <x>425</x>
-     <y>380</y>
-    </hint>
-   </hints>
-  </connection>
- </connections>
+ <connections/>
 </ui>
